small changes in styling

--- a/client1/src/index.css
+++ b/client1/src/index.css
@@ -233,8 +233,8 @@ body {
     /* Set width of search input */
 }
 
-.searchboxx button {
-    background-color: #28a745;
+.searchboxx  {
+    /* background-color: #28a745; */
     color: white;
     border: none;
     padding: 0.5rem 1rem;
